--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 /*noinspection CssInvalidAtRule*/
 @import-normalize;
 
+@import './variables.css';
+
 @font-face {
     font-family: 'Gilroy';
     src: url('/fonts/Gilroy-Medium.woff2') format('woff2'),
@@ -97,16 +99,3 @@ blockquote {
     margin: 0;
 }
 
-:root {
-    --font-gilroy: 'Gilroy', sans-serif;
-    --royal-blue: #10069f;
-    --dark-cream: #ffe092;
-    --coral: #ef634d;
-    --black-30: rgba(0, 0, 0, 0.3);
-    --black-40: rgba(0, 0, 0, 0.4);
-    --black-50: rgba(0, 0, 0, 0.5);
-    --pale-grey: #f2f4f7;
-    --valid-greed: #8adbb9;
-    --graphite-grey: #4f4f4f;
-    --almost-black: #1D1D1D;
-}
